crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__pipe_let_function_call.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | let host_lower = lower(host)\")"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
)
SELECT *, (LOWER("host")) AS "host_lower"
FROM "_s0"
