crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__pipe_let_override_existing.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | let level = lower(level)\")"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
)
SELECT * EXCLUDE ("level"), (LOWER("level")) AS "level"
FROM "_s0"
