crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__pipe_let_round_no_precision.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | let r = round(duration)\")"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
)
SELECT COLUMNS(c -> c NOT IN ('r')), (ROUND("duration")) AS "r"
FROM "_s0"
