crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__pipe_limit.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | limit 20\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet')
LIMIT 20
