crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__pipe_pivot_basic.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | pivot count() on status by host\")"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
), _s1 AS (
  SELECT "status", "host"
  FROM "_s0"
)
PIVOT "_s1"
ON "status"
USING COUNT(*)
GROUP BY "host"
